--- a/Aula 7 - Pandas parte 1.ipynb
+++ b/Aula 7 - Pandas parte 1.ipynb
@@ -7092,7 +7092,7 @@
     "width": "187px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
